# math_parser

./: README.md
c_version/: .gitignore  CMakeLists.txt  main.c
c_version/src/: CMakeLists.txt
c_version/src/include/: math_parser.h  parser.h  tokenizer.h
c_version/src/lib/: parser.c  tokenizer.c
c_version/test/: CMakeLists.txt  arithmetic_test.cpp  number_test.cpp
c_version/test/tokenizer_tests/: CMakeLists.txt  digits_test.cpp  name_test.cpp  operator_test.cpp
